[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "numeric-array"
description = "Wrapper around generic-array that adds efficient numeric trait implementations"
repository = "https://github.com/novacrazy/numeric-array"
documentation = "https://docs.rs/numeric-array"
version = "0.5.2"
readme = "README.md"
keywords = ["generic", "array", "numeric", "simd"]
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
categories = ["data-structures"]

[dependencies]
generic-array = "1.0"
num-traits = "0.2"
serde = { version = "1.0", optional = true, default_features = false }

[features]
serde1 = ["serde", "generic-array/serde"]

[dev-dependencies]
serde_json = "1.0"
