[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "numeric-array"
description = "Wrapper around generic-array that adds efficient numeric trait implementations"
repository = "https://github.com/novacrazy/numeric-array"
documentation = "https://docs.rs/numeric-array"
version = "0.6.1"
readme = "README.md"
keywords = ["generic", "array", "numeric", "simd"]
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
categories = ["data-structures"]
edition = "2021"

[dependencies]
generic-array = { version = "1.0", default-features = false, features = ["internals"] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[features]
serde = ["dep:serde", "generic-array/serde"]
std = ["num-traits/std"]
default = ["std"]

[dev-dependencies]
serde_json = "1.0"
